Fix: overflow width in responsive. Feat: box-shadow for game field.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -94,6 +94,7 @@ body {
   background-color: var(--background-color);
   font-family: 'Titillium Web', sans-serif;
   transition: all 0.1s ease-out;
+  width: 100%;
 }
 
 body::before{
@@ -117,7 +118,7 @@ header{
 }
 
 main {
-  max-width: 100%;
+  width: 100%;
 }
 
 /* Ship Placement */
@@ -174,11 +175,12 @@ main {
 
 /* Boards */
 
-.player-wrapper{
+.player-wrapper {
   padding: 0.5rem;
   margin: 0.2rem;
   border-radius: 2rem;
   backdrop-filter: blur(15px) brightness(2);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .gameboard {
@@ -341,6 +343,7 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr auto;
     grid-gap: 0;
+    width: calc((10*var(--grid-size) + var(--grid-gap)*9) + 1rem);
   }
 
   #Player1{
@@ -371,4 +374,8 @@ main {
   }
 
   body{font-size: 12px;}
+
+  #game {
+    width: 100%;
+  }
 }
